# pg_tokenizer.rs

./: .gitignore  .taplo.toml  .typos.toml  Cargo.toml  README.md  pg_tokenizer.control
.github/workflows/: check.yml  release.yml
assets/model/: wiki_tocken.json
docker/: binary.Dockerfile
docs/: 00-reference.md  01-installation.md  02-development.md  03-examples.md  04-usage.md  05-text-analyzer.md  06-model.md  07-limitation.md
sql/install/: pg_tokenizer--0.1.0.sql  pg_tokenizer--0.1.1.sql
sql/upgrade/: pg_tokenizer--0.1.0--0.1.1.sql
src/: lib.rs  text_analyzer.rs  tokenizer.rs  utils.rs
src/character_filter/: mod.rs  to_lowercase.rs  unicode_normalization.rs
src/datatype/: bm25vector.rs  memory_bm25vector.rs  mod.rs
src/model/: builtin.rs  custom.rs  huggingface.rs  lindera.rs  mod.rs
src/pre_tokenizer/: jieba.rs  mod.rs  regex.rs  unicode_segmentation.rs
src/token_filter/: mod.rs  ngram.rs  pg_dict.rs  skip_non_alphanumeric.rs  stemmer.rs  stopwords.rs  synonym.rs
tests/: README.md  init.sql  requirements.txt
tests/import_huggingface_model/: bert_base_chinese.py  bert_base_uncased.py
tests/sqllogictest/: builtin.slt  chinese.slt  custom_model.slt  custom_model_with_trigger.slt  french_stem.slt  german_stem.slt  japanese.slt  jieba.slt  lindera.slt  ngram.slt  stopwords.slt  synonym.slt  text_analyzer.slt  tokenizer.slt
tools/: package.sh  setup.sh
