[package]
name = "pg_tokenizer"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_tokenizer"
path = "./src/bin/pgrx_embed.rs"

[features]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []
lindera-ipadic = ["lindera/ipadic"]
lindera-ipadic-neologd = ["lindera/ipadic-neologd"]
lindera-unidic = ["lindera/unidic"]
lindera-ko-dic = ["lindera/ko-dic"]
lindera-cc-cedict = ["lindera/cc-cedict"]

[dependencies]
anyhow = "1.0.97"
dashmap = "6.1.0"
jieba-rs = "0.7.2"
lindera = "0.37.0"
pgrx = "=0.13.1"
regex = "1.11.1"
rust-stemmers = { git = "https://github.com/tensorchord/rust-stemmers.git", rev = "51696378e352688b7ffd4fface615370ff5e8768" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tocken = "0.1.0"
tokenizers = "0.21.0"
toml = "0.8.20"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
pgrx-tests = "=0.13.1"

[patch.crates-io]
pgrx = { git = "https://github.com/silver-ymz/pgrx", branch = "patch-to-pg_tokenizer" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 3
lto = "thin"
codegen-units = 8
